--- a/index.html
+++ b/index.html
@@ -9,126 +9,140 @@
 </head>
 
 <body>
-  <img src="assets/images/image-omelette.jpeg" alt="">
-  <h1>
-    Simple Omelette Recipe
-  </h1>
-  <p class="paragraph-principal">
-    An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
-    to perfection, optionally filled with your choice of cheese, vegetables, or meats.
-  </p>
-  <h2 class="preparation-time">
-    Preparation time
-  </h2>
-  <ul class="ingredient-list">
-    <li>
-      Total: Approximately 10 minutes
-    </li>
-    <li>
-      Preparation: 5 minutes
-    </li>
-    <li>
-      Cooking: 5 minutes
-    </li>
-  </ul>
-  <h2 class="ingredients">
-    Ingredients
-  </h2>
-  <ul class="recipe-pass">
-    <li>
-      2-3 large eggs
-    </li>
-    <li>
-      Salt, to taste
-    </li>
-    <li>
-      Pepper, to taste
-    </li>
-    <li>
-      1 tablespoon of butter or oil
-    </li>
-    <li>
-      Optional fillings: cheese, diced vegetables, cooked meats, herbs
-    </li>
-  </ul>
-  <h2 class="instructions">
-    Instructions
-  </h2>
-  <ol class="recipe-orders">
-    <li>
-      Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
-      You can add a tablespoon of water or milk for a fluffier texture.
-    </li>
-    <li>
-      Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
-    </li>
-    <li>
-      Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure
-      the eggs evenly coat the surface.
-    </li>
-    <li>
-      Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the
-      middle, sprinkle your chosen fillings over one half of the omelette.
-    </li>
-    <li>
-      Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the
-      fillings. Let it cook for another minute, then slide it onto a plate.
-    </li>
-    <li>
-      Enjoy: Serve hot, with additional salt and pepper if needed.
-    </li>
-  </ol>
-  <h2 class="nutrition">
-    Nutrition
-  </h2>
-  <p class="paragraph-secundary">
-    The table below shows nutritional values per serving without the additional fillings.
-  </p>
-  <div class="posicione">
-    <table class="left">
-      <tr>
-        <th>
-          Calories
-        </th>
-      </tr>
-      <tr>
-        <th>
-          Carbs
-        </th>
-      </tr>
-      <tr>
-        <th>
-          Protein
-        </th>
-      </tr>
-      <tr>
-        <th>
-          Fat
-        </th>
-      </tr>
-    </table>
-    <table class="right">
-      <tr>
-        <th>
-          277kcal
-        </th>
-      </tr>
-      <tr>
-        <th>
-          0g
-        </th>
-      </tr>
-      <tr>
-        <th>
-          20g
-        </th>
-      </tr>
-      <tr>
-        <th>
-          22g
-        </th>
-      </tr>
-    </table>
+  <div class="align-flex-start">
+    <img src="assets/images/image-omelette.jpeg" alt="">
+    <div class="first-section section-all">
+      <h1>
+        Simple Omelette Recipe
+      </h1>
+      <p class="paragraph-principal">
+        An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
+        to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+      </p>
+      <div class="background">
+        <div class="h2">
+          <h2 class="preparation-time">
+            Preparation time
+          </h2>
+        </div>
+        <ul class="ingredient-list">
+          <li>
+            Total: Approximately 10 minutes
+          </li>
+          <li>
+            Preparation: 5 minutes
+          </li>
+          <li>
+            Cooking: 5 minutes
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="second-section section-all">
+      <h2 class="ingredients">
+        Ingredients
+      </h2>
+      <ul class="recipe-pass">
+        <li>
+          2-3 large eggs
+        </li>
+        <li>
+          Salt, to taste
+        </li>
+        <li>
+          Pepper, to taste
+        </li>
+        <li>
+          1 tablespoon of butter or oil
+        </li>
+        <li>
+          Optional fillings: cheese, diced vegetables, cooked meats, herbs
+        </li>
+      </ul>
+    </div>
+    <div class="third-section section-all">
+      <h2 class="instructions">
+        Instructions
+      </h2>
+      <ol class="recipe-orders">
+        <li>
+          Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
+          You can add a tablespoon of water or milk for a fluffier texture.
+        </li>
+        <li>
+          Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
+        </li>
+        <li>
+          Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure
+          the eggs evenly coat the surface.
+        </li>
+        <li>
+          Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the
+          middle, sprinkle your chosen fillings over one half of the omelette.
+        </li>
+        <li>
+          Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the
+          fillings. Let it cook for another minute, then slide it onto a plate.
+        </li>
+        <li>
+          Enjoy: Serve hot, with additional salt and pepper if needed.
+        </li>
+      </ol>
+    </div>
+    <div class="fourth-section section-all">
+      <h2 class="nutrition">
+        Nutrition
+      </h2>
+      <p class="paragraph-secundary">
+        The table below shows nutritional values per serving without the additional fillings.
+      </p>
+      <div class="posicione">
+        <table class="left">
+          <tr>
+            <th>
+              Calories
+            </th>
+          </tr>
+          <tr>
+            <th>
+              Carbs
+            </th>
+          </tr>
+          <tr>
+            <th>
+              Protein
+            </th>
+          </tr>
+          <tr>
+            <th>
+              Fat
+            </th>
+          </tr>
+        </table>
+        <table class="right">
+          <tr>
+            <th>
+              277kcal
+            </th>
+          </tr>
+          <tr>
+            <th>
+              0g
+            </th>
+          </tr>
+          <tr>
+            <th>
+              20g
+            </th>
+          </tr>
+          <tr>
+            <th>
+              22g
+            </th>
+          </tr>
+        </table>
+      </div>
+    </div>
   </div>
 </body>
 
