--- a/index.html
+++ b/index.html
@@ -96,52 +96,28 @@
       <p class="paragraph-secundary">
         The table below shows nutritional values per serving without the additional fillings.
       </p>
-      <div class="posicione">
-        <table class="left">
+        <table>
           <tr>
-            <th>
-              Calories
-            </th>
+            <th>Nutrient</th>
+            <th>Amount</th>
           </tr>
           <tr>
-            <th>
-              Carbs
-            </th>
+            <td>Calories</td>
+            <td>277 kcal</td>
           </tr>
           <tr>
-            <th>
-              Protein
-            </th>
+            <td>Carbs</td>
+            <td>0 g</td>
           </tr>
           <tr>
-            <th>
-              Fat
-            </th>
-          </tr>
-        </table>
-        <table class="right">
-          <tr>
-            <th>
-              277kcal
-            </th>
+            <td>Protein</td>
+            <td>20 g</td>
           </tr>
           <tr>
-            <th>
-              0g
-            </th>
-          </tr>
-          <tr>
-            <th>
-              20g
-            </th>
-          </tr>
-          <tr>
-            <th>
-              22g
-            </th>
+            <td>Fat</td>
+            <td>22 g</td>
           </tr>
         </table>
-      </div>
     </div>
   </div>
 </body>
